# 3D-convex-hull-algorithm

./: CMakeLists.txt  README.md  convexHull.cpp  convexHull.hpp  edge.cpp  edge.hpp  face.cpp  face.hpp  geometry.hpp  plot.py  point3d.cpp  point3d.hpp  test.cpp  test_collision.cpp  test_convexhull.cpp  test_performance.cpp  visualizer.cpp  visualizer.hpp
data/: cube.txt  random1.txt  random2.txt  tetrahedron1.txt  tetrahedron2.txt  tetrahedron3.txt  tetrahedron4.txt
result/: collision_time.txt  hull_time.txt
